chore: fix overlapping coverage line status

--- a/app/common/CodeBlock/CodeBlock.module.scss
+++ b/app/common/CodeBlock/CodeBlock.module.scss
@@ -97,6 +97,7 @@
       user-select: none;
       border-right: 1px solid #979797;
       text-align: right;
+      height: 20px;
 
       div {
         padding: 0 10px;
